--- a/drivers/uart_generic/Kconfig
+++ b/drivers/uart_generic/Kconfig
@@ -15,7 +15,7 @@ if UART_GENERIC
 
 config UART_SHELL
 	bool "Enable UART shell"
-	select CONSOLE_SHELL
+	select SHELL
 	help
 	  Activate shell module that provides functions to communicate with UART devices.
 
