--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-D__ZEPHYR_SUPERVISOR__)
 
-add_subdirectory(console)
+add_subdirectory_ifdef(CONFIG_CONSOLE console)
 add_subdirectory(interrupt_controller)
 
 add_subdirectory_if_kconfig(adc)
